add meta tag from naver

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+      <meta name="naver-site-verification" content="538d76af07d897c97d46eda9059b8e8ac8f61662"/>
     <title>골드폐차</title>
   </head>
   <body>
